[tests] Remove obsolete -XX:MaxPermSize parameter
Change-Id: If06ec2c2023d4e7ca90f7f5a8ff0f720faa46522
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>